--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css":"node-sass --include-path scss ./sass/style.scss ./css/style.css",
-    "watch-css":"nodemon -e scss -x \"npm run build-css \""
-    
+    "build-css": "node-sass --include-path scss ./sass/style.scss ./css/style.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css \""
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +13,8 @@
   "devDependencies": {
     "node-sass": "^9.0.0",
     "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.14.1"
   }
 }
